--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,31 +1,37 @@
 <div class="green-border"></div>
 
 <div class="footer-container">
-  <div class="title-impressum">
-    <a href="#landing-page"><h2>Özcan</h2> </a>
-    <a [routerLink]="['/app-imprint']" (click)="scrollToTop()" class="imprint"
-      >Imprint</a
-    >
-  </div>
-  <div class="date">
-    <span>© Özcan Mirzanli 2024</span>
-  </div>
-  <div class="contact-links">
-    <a href="https://github.com/ozcanmirzanli" target="_blank">
-      <img src="assets/img/github_btn.png" alt="github_btn" />
-    </a>
-    <a href="mailto:ozcanmirzanli@proton.me" target="_blank">
-      <img src="assets/img/email_btn.png" alt="email_btn" />
-    </a>
-    <a href="https://www.linkedin.com/in/ozcan-mirzanli/" target="_blank">
-      <img src="assets/img/linkedin_btn.png" alt="linkedin_btn" />
-    </a>
-    <a
-      [routerLink]="['/app-privacy-policy']"
-      href="#"
-      (click)="scrollToTop()"
-      class="legal-notice"
-      >Legal Notice</a
-    >
+  <div class="footer-content">
+    <div class="title-impressum">
+      <a href="#landing-page"><h2>Özcan</h2> </a>
+      <a [routerLink]="['/app-imprint']" (click)="scrollToTop()" class="imprint"
+        >Imprint</a
+      >
+    </div>
+    <div class="date">
+      <span>© Özcan Mirzanli 2024</span>
+    </div>
+    <div class="contact-links">
+      <a href="https://github.com/ozcanmirzanli" target="_blank">
+        <img src="assets/img/github_btn.png" alt="github_btn" />
+      </a>
+      <a href="mailto:ozcanmirzanli@proton.me" target="_blank">
+        <img src="assets/img/email_btn.png" alt="email_btn" />
+      </a>
+      <a href="https://www.linkedin.com/in/ozcan-mirzanli/" target="_blank">
+        <img
+          src="assets/img/linkedin_btn.png"
+          alt="linkedin_btn"
+          style="margin-right: 0"
+        />
+      </a>
+      <a
+        [routerLink]="['/app-privacy-policy']"
+        href="#"
+        (click)="scrollToTop()"
+        class="legal-notice"
+        >Legal Notice</a
+      >
+    </div>
   </div>
 </div>
