--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="header-content">
-    <a href="#landing-page"><h2>Özcan</h2></a>
+    <a href="#" onclick="window.location.reload();"><h2>Özcan</h2></a>
 
     <div class="header-links">
       <ul>
