--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -69,6 +69,7 @@
   width: 100%;
   height: 150%;
   pointer-events: none;
+  animation: shadowPulse 2.5s infinite ease-in-out;
 }
 
 .about-me-shadow {
