--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -23,21 +23,18 @@ html {
   margin-top: 250px;
 }
 
-h1 {
-  font-size: 60px;
-}
-
 h2 {
   color: white;
-  font-size: 50px;
+  font-size: 3rem;
 }
 
 h3 {
   color: white;
-  font-size: 22px;
+  font-size: 16px;
 }
 
 a {
   text-decoration: none;
   color: white;
+  font-size: 16px;
 }
