--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 *,
 body {
   margin: 0;
-  font-family: poppins;
+  font-family: "Poppins";
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
@@ -60,6 +60,16 @@ body {
 
 app-porfolio {
   margin-top: 100px;
+}
+
+@keyframes shadowPulse {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
 }
 
 @media (max-width: 1440px) {
