translation option added

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,33 +1,16 @@
 <div class="about-me-container">
   <div class="about-me">
     <div class="about-me-text">
-      <h1>About me</h1>
-      <p>
-        Hi, I'm a passionate Frontend Developer based in Berlin. I thrive on
-        turning complex ideas into intuitive and visually appealing user
-        experiences. As Edsger Dijkstra wisely said, “The art of programming is
-        the art of organizing complexity, mastering variety, and avoiding
-        chaos.” This philosophy drives me to excel in my work.
-      </p>
+      <h2>{{ "ABOUT_ME.TITLE" | translate }}</h2>
+      <p>{{ "ABOUT_ME_TEXT" | translate }}</p>
       <div class="about-me-details">
         <div class="about-me-single">
           <img src="assets/img/location.png" alt="location" />
-          <p>
-            I am adaptable to various work environments and willing to relocate
-            if needed. I prefer hybrid work but am also open to on-site or
-            remote arrangements.
-          </p>
+          <p>{{ "ABOUT_ME_DETAILS.LOCATION" | translate }}</p>
         </div>
         <div class="about-me-single">
           <img src="assets/img/bulb.png" alt="bulb" />
-          <p>
-            I'm a dedicated problem-solver who enjoys tackling challenges
-            head-on. I relish the opportunity to dive into complex challenges,
-            dissecting them into manageable parts, and crafting elegant
-            solutions. Whether it’s troubleshooting bugs, optimizing
-            performance, or refining user interactions, I’m committed to finding
-            effective, innovative answers.
-          </p>
+          <p>{{ "ABOUT_ME_DETAILS.PROBLEM_SOLVER" | translate }}</p>
         </div>
         <div class="about-me-single">
           <img
@@ -35,13 +18,7 @@
             alt="puzzle"
             style="margin-right: 27px"
           />
-          <p>
-            My creativity shines through when I translate Figma designs into
-            functional, user-friendly websites with innovative features. Whether
-            it's crafting responsive layouts or implementing engaging
-            interactive elements, I take pride in making each project a unique
-            digital experience.
-          </p>
+          <p>{{ "ABOUT_ME_DETAILS.CREATIVITY" | translate }}</p>
         </div>
       </div>
     </div>
