--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,8 @@
 <div class="main-container">
   <div class="imprint-container">
-    <h2>Imprint</h2>
+    <h2>
+      <h2>{{ "EXTRAS.IMPRINT" | translate }}</h2>
+    </h2>
 
     <h3>
       &Ouml;zcan Mirzanli<br />
@@ -9,14 +11,14 @@
     </h3>
     <br />
     <br />
-    <h2>Contact</h2>
+    <h2>{{ "EXTRAS.CONTACT" | translate }}</h2>
     <h3>
       Telefon: 017685463990<br />
       E-Mail: ozcanmirzanli&#64;proton.me
     </h3>
 
     <h3>
-      Source: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
+      {{ "EXTRAS.SOURCE" | translate }}: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
     </h3>
   </div>
 </div>
