--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,13 @@ h1 {
   line-height: 108px;
 }
 
+h2 {
+  color: white;
+  font-size: 70px;
+  font-weight: 700;
+  line-height: 108px;
+}
+
 body {
   background-color: var(--background-color);
   overflow-x: hidden !important;
