--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,16 +1,13 @@
 <div class="contact-container">
   <div class="contact-title">
-    <h1>Contact</h1>
+    <h2>{{ "CONTACT.TITLE" | translate }}</h2>
     <div class="purple-border-big"></div>
   </div>
   <div class="contact-section">
     <div class="contact-text">
-      <h2>Got a problem to solve?</h2>
-      <p>
-        Contact me through this form, I am interested in hearing from you,
-        knowing your ideas and contributing to your projects with my work.
-      </p>
-      <p>Need a Frontend developer? <b>Contact me!</b></p>
+      <h3>{{ "CONTACT.PROBLEM_SOLVE" | translate }}</h3>
+      <p>{{ "CONTACT.CONTACT_TEXT" | translate }}</p>
+      <p [innerHTML]="'CONTACT.NEED_FRONTEND_DEV' | translate"></p>
     </div>
     <form
       (ngSubmit)="onSubmit(contactForm)"
@@ -26,14 +23,12 @@
         }"
         type="text"
         name="name"
-        placeholder="Your name"
+        [placeholder]="'CONTACT.NAME_PLACEHOLDER' | translate"
         required
       />
-      @if (!name.valid && name.touched) {
-      <div class="required-container">
-        <span>Your name is required</span>
+      <div *ngIf="!name.valid && name.touched" class="required-container">
+        <span>{{ "CONTACT.NAME_REQUIRED" | translate }}</span>
       </div>
-      }
       <input
         #email="ngModel"
         [(ngModel)]="contactData.email"
@@ -43,15 +38,13 @@
         }"
         type="email"
         name="email"
-        placeholder="Your email"
+        [placeholder]="'CONTACT.EMAIL_PLACEHOLDER' | translate"
         required
         pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
       />
-      @if (!email.valid && email.touched) {
-      <div class="required-container">
-        <span>Your email is required</span>
+      <div *ngIf="!email.valid && email.touched" class="required-container">
+        <span>{{ "CONTACT.EMAIL_REQUIRED" | translate }}</span>
       </div>
-      }
       <textarea
         #message="ngModel"
         [(ngModel)]="contactData.message"
@@ -59,17 +52,15 @@
           'valid-field': message.valid && message.touched,
           'invalid-field': !message.valid && message.touched
         }"
-        placeholder="Your message"
+        [placeholder]="'CONTACT.MESSAGE_PLACEHOLDER' | translate"
         id="message"
         name="message"
         minlength="4"
         required
       ></textarea>
-      @if (!message.valid && message.touched) {
-      <div class="required-container">
-        <span>Your message is empty</span>
+      <div *ngIf="!message.valid && message.touched" class="required-container">
+        <span>{{ "CONTACT.MESSAGE_REQUIRED" | translate }}</span>
       </div>
-      }
       <div class="privacy-policy">
         <div class="check-box">
           <img
@@ -77,25 +68,26 @@
             (click)="checkBoxToggle()"
             alt="Checkbox"
           />
-          <span
-            >I've read the
-            <a
-              [routerLink]="['/app-privacy-policy']"
-              href="#"
-              (click)="scrollToTop()"
-              ><span class="purple">privacy policy </span></a
-            >and agree to the processing of my data as outlined.</span
-          >
+
+          <span>
+            {{ "CONTACT.PRIVACY_POLICY_PART1" | translate }}
+            <a [routerLink]="['/app-privacy-policy']" (click)="scrollToTop()">
+              <span class="purple">{{
+                "CONTACT.PRIVACY_POLICY_LINK" | translate
+              }}</span>
+            </a>
+            {{ "CONTACT.PRIVACY_POLICY_PART2" | translate }}
+          </span>
         </div>
         <div
           *ngIf="!isChecked && isCheckboxTouched"
           class="required-container privacy-warning"
         >
-          <span>Please accept the privacy policy.</span>
+          <span>{{ "CONTACT.PRIVACY_POLICY_REQUIRED" | translate }}</span>
         </div>
       </div>
       <div *ngIf="emailSent" class="confirmation-message">
-        Your email has been sent!
+        {{ "CONTACT.EMAIL_SENT" | translate }}
       </div>
       <div class="button-container">
         <button
@@ -108,7 +100,7 @@
           value="Submit"
           [disabled]="!contactForm.valid || !isChecked"
         >
-          Send message :)
+          {{ "CONTACT.SEND_MESSAGE" | translate }}
         </button>
       </div>
     </form>
