--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -71,10 +71,17 @@ textarea {
 
 h2 {
   color: white;
-  font-size: 32px;
+  font-size: 70px;
   font-weight: 700;
   line-height: 38.4px;
   margin-bottom: 24px;
+}
+
+h3 {
+  color: white;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 108px;
 }
 
 p {
@@ -270,7 +277,7 @@ span {
 }
 
 @media (max-width: 400px) {
-  h2 {
+  h3 {
     font-size: 23px;
     margin-bottom: 10px;
   }
