--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,221 +1,75 @@
 <div class="main-container">
   <div class="privacy-container">
-    <h1>Privacy Policy</h1>
-    <h2>1. Data Protection at a Glance</h2>
-    <h3>General Information</h3>
-    <p>
-      The following information provides a simple overview of what happens to
-      your personal data when you visit this website. Personal data refers to
-      all data that can identify you personally. For detailed information on
-      data protection, please refer to the Privacy Policy listed below this
-      text.
-    </p>
-    <h3>Data Collection on this Website</h3>
-    <h3>Who is responsible for data collection on this website?</h3>
-    <p>
-      Data processing on this website is carried out by the website operator.
-      You can find their contact details in the "Notice on the Responsible
-      Entity" section of this Privacy Policy.
-    </p>
-    <h3>How do we collect your data?</h3>
-    <p>
-      Your data is collected partly by you providing it to us, such as data you
-      enter into a contact form.
-    </p>
-    <p>
-      Other data is collected automatically or with your consent when you visit
-      the website through our IT systems. This primarily includes technical data
-      (e.g., internet browser, operating system, or time of page access). The
-      collection of this data occurs automatically as soon as you access the
-      website.
-    </p>
-    <h3>What do we use your data for?</h3>
-    <p>
-      Some of the data is collected to ensure the proper functioning of the
-      website. Other data may be used to analyze your user behavior.
-    </p>
-    <h3>What rights do you have regarding your data?</h3>
-    <p>
-      You have the right to obtain information free of charge about the origin,
-      recipient, and purpose of your stored personal data at any time. You also
-      have the right to request the correction or deletion of this data. If you
-      have given consent to data processing, you can revoke this consent at any
-      time for the future. Additionally, you have the right to request the
-      restriction of the processing of your personal data under certain
-      circumstances. Furthermore, you have the right to file a complaint with
-      the competent supervisory authority.
-    </p>
-    <p>
-      You can contact us at any time regarding this and other questions about
-      data protection.
-    </p>
-    <br />
-    <h2>2. Hosting</h2>
-    <p>We host the content of our website with the following provider:</p>
-    <h3>External Hosting</h3>
-    <p>
-      This website is hosted externally. The personal data collected on this
-      website is stored on the servers of the host/provider. This may include IP
-      addresses, contact inquiries, meta and communication data, contract data,
-      contact details, names, website access data, and other data generated
-      through a website.
-    </p>
-    <p>
-      External hosting is done to fulfill the contract with our potential and
-      existing customers (Art. 6 para. 1 lit. b GDPR) and in the interest of a
-      secure, fast, and efficient provision of our online services by a
-      professional provider (Art. 6 para. 1 lit. f GDPR). If consent has been
-      obtained, processing is carried out exclusively on the basis of Art. 6
-      para. 1 lit. a GDPR and § 25 para. 1 TTDSG, insofar as the consent
-      includes the storage of cookies or access to information on the user’s
-      device (e.g., device fingerprinting) within the meaning of the TTDSG.
-      Consent can be revoked at any time.
-    </p>
-    <p>
-      Our host will only process your data to the extent necessary to fulfill
-      its service obligations and follow our instructions regarding this data.
-    </p>
-    <p>We use the following host(s):</p>
-    <p>www.hostinger.de</p>
-    <br />
+    <h1>{{ "PRIVACY_POLICY" | translate }}</h1>
 
-    <h2>3. General Information and Mandatory Information</h2>
-    <h3>Data Protection</h3>
-    <p>
-      The operators of these pages take the protection of your personal data
-      very seriously. We treat your personal data confidentially and in
-      accordance with the legal data protection regulations and this Privacy
-      Policy.
-    </p>
-    <p>
-      When you use this website, various personal data is collected. Personal
-      data is data with which you can be personally identified. This Privacy
-      Policy explains which data we collect and what we use it for. It also
-      explains how and for what purpose this happens.
-    </p>
-    <p>
-      We point out that data transmission over the Internet (e.g., when
-      communicating via email) can have security vulnerabilities. A complete
-      protection of the data against access by third parties is not possible.
-    </p>
-    <h3>Notice on the Responsible Entity</h3>
-    <p>The responsible entity for data processing on this website is:</p>
+    <h2>{{ "DATA_PROTECTION_OVERVIEW" | translate }}</h2>
+    <h3>{{ "GENERAL_INFORMATION" | translate }}</h3>
+    <p>{{ "DATA_COLLECTION_ON_WEBSITE" | translate }}</p>
+    <p>{{ "DATA_COLLECTION_ON_WEBSITE_CONTENT" | translate }}</p>
+
+    <h3>{{ "RESPONSIBLE_FOR_DATA_COLLECTION" | translate }}</h3>
+    <p>{{ "DATA_PROCESSING" | translate }}</p>
+    <p>{{ "NOTICE_ON_RESPONSIBLE_ENTITY" | translate }}</p>
+
+    <h3>{{ "HOW_WE_COLLECT_DATA" | translate }}</h3>
+    <p>{{ "HOW_WE_COLLECT_DATA_CONTENT" | translate }}</p>
+    <p>{{ "OTHER_DATA_COLLECTION" | translate }}</p>
+
+    <h3>{{ "USE_OF_DATA" | translate }}</h3>
+    <p>{{ "USE_OF_DATA_CONTENT" | translate }}</p>
+
+    <h3>{{ "RIGHTS_REGARDING_DATA" | translate }}</h3>
+    <p>{{ "RIGHTS_REGARDING_DATA_CONTENT" | translate }}</p>
+    <p>{{ "CONTACT_US" | translate }}</p>
+
+    <h2>{{ "HOSTING" | translate }}</h2>
+    <p>{{ "WE_HOST_WITH" | translate }}</p>
+    <h3>{{ "EXTERNAL_HOSTING" | translate }}</h3>
+    <p>{{ "EXTERNAL_HOSTING_CONTENT" | translate }}</p>
+    <p>{{ "HOST_PROCESS_DATA" | translate }}</p>
+    <p>{{ "HOST" | translate }}</p>
+    <p>www.hostinger.de</p>
+
+    <h2>{{ "GENERAL_INFORMATION_MANDATORY_INFO" | translate }}</h2>
+    <h3>{{ "DATA_PROTECTION" | translate }}</h3>
+    <p>{{ "DATA_PROTECTION_CONTENT" | translate }}</p>
+    <p>{{ "DATA_TRANSMISSION_SECURITY" | translate }}</p>
+
+    <h3>{{ "RESPONSIBLE_ENTITY" | translate }}</h3>
     <p>
       Özcan Mirzanli<br />
       Müritzstr. 31<br />
       10318, Berlin
     </p>
-
     <p>
       Phone: +49 176 854 63990<br />
       Email: ozcanmirzanli&#64;proton.me
     </p>
-    <p>
-      The responsible entity is the natural or legal person who alone or jointly
-      with others determines the purposes and means of the processing of
-      personal data (e.g., names, email addresses, etc.).
-    </p>
+    <p>{{ "RESPONSIBLE_ENTITY_EXPLANATION" | translate }}</p>
 
-    <h3>Storage Duration</h3>
-    <p>
-      As long as no more specific storage duration is mentioned in this Privacy
-      Policy, your personal data remains with us until the purpose of data
-      processing no longer applies. If you make a legitimate deletion request or
-      revoke your consent to data processing, your data will be deleted, unless
-      we have other legally permissible reasons for storing your personal data
-      (e.g., tax or commercial law retention periods); in the latter case,
-      deletion will occur after these reasons no longer apply.
-    </p>
-    <h3>
-      General Information on the Legal Bases for Data Processing on This Website
-    </h3>
-    <p>
-      If you have given consent to data processing, we process your personal
-      data based on Art. 6 para. 1 lit. a GDPR or Art. 9 para. 2 lit. a GDPR, if
-      special categories of data are processed under Art. 9 para. 1 GDPR. In the
-      case of explicit consent to the transfer of personal data to third
-      countries, data processing is also based on Art. 49 para. 1 lit. a GDPR.
-      If you have consented to the storage of cookies or access to information
-      on your end device (e.g., via device fingerprinting), data processing is
-      additionally based on § 25 para. 1 TTDSG. Consent can be revoked at any
-      time. If your data is necessary for the performance of a contract or for
-      the implementation of pre-contractual measures, we process your data based
-      on Art. 6 para. 1 lit. b GDPR. Furthermore, we process your data if this
-      is necessary to fulfill a legal obligation based on Art. 6 para. 1 lit. c
-      GDPR. Data processing may also occur based on our legitimate interests
-      under Art. 6 para. 1 lit. f GDPR. The relevant legal bases for data
-      processing will be explained in the following sections of this Privacy
-      Policy.
-    </p>
-    <h3>Recipients of Personal Data</h3>
-    <p>
-      In the course of our business activities, we work with various external
-      entities. In some cases, it is necessary to transfer personal data to
-      these external entities. We only pass on personal data to external
-      entities if this is necessary for the fulfillment of a contract, if we are
-      legally obliged to do so (e.g., transfer of data to tax authorities), if
-      we have a legitimate interest in the transfer under Art. 6 para. 1 lit. f
-      GDPR, or if another legal basis allows the data transfer. When using
-      processors, we only transfer personal data of our customers based on a
-      valid contract for processing. In the case of joint processing, a contract
-      for joint processing will be concluded.
-    </p>
-    <h3>Revocation of Your Consent to Data Processing</h3>
-    <p>
-      Many data processing operations are only possible with your explicit
-      consent. You can revoke any consent you have already given at any time.
-      The legality of the data processing carried out until the revocation
-      remains unaffected by the revocation.
-    </p>
-    <h3>
-      Right to Object to Data Collection in Special Cases and to Direct
-      Marketing (Art. 21 GDPR)
-    </h3>
-    <p>
-      IF DATA PROCESSING IS BASED ON ART. 6 PARA. 1 LIT. E OR F GDPR, YOU HAVE
-      THE RIGHT TO OBJECT AT ANY TIME, ON GROUNDS RELATING TO YOUR PARTICULAR
-      SITUATION, TO THE PROCESSING OF YOUR PERSONAL DATA; THIS ALSO APPLIES TO
-      PROFILING BASED ON THESE PROVISIONS. THE RELEVANT LEGAL BASIS FOR THE
-      PROCESSING WILL BE PROVIDED IN THIS PRIVACY POLICY. IF YOU OBJECT, WE WILL
-      NO LONGER PROCESS YOUR AFFECTED PERSONAL DATA UNLESS WE CAN DEMONSTRATE
-      COMPELLING PROTECTIVE GROUNDS FOR THE PROCESSING THAT OVERRIDE YOUR
-      INTERESTS, RIGHTS, AND FREEDOMS OR THE PROCESSING IS NECESSARY FOR THE
-      ESTABLISHMENT, EXERCISE, OR DEFENSE OF LEGAL CLAIMS (OBJECTION UNDER ART.
-      21 PARA. 1 GDPR).
-    </p>
-    <p>
-      IF YOUR PERSONAL DATA IS PROCESSED FOR DIRECT MARKETING PURPOSES, YOU HAVE
-      THE RIGHT TO OBJECT AT ANY TIME TO THE PROCESSING OF YOUR PERSONAL DATA
-      FOR SUCH MARKETING; THIS ALSO APPLIES TO PROFILING TO THE EXTENT THAT IT
-      IS RELATED TO SUCH DIRECT MARKETING. IF YOU OBJECT, YOUR PERSONAL DATA
-      WILL NO LONGER BE USED FOR DIRECT MARKETING PURPOSES (OBJECTION UNDER ART.
-      21 PARA. 2 GDPR).
-    </p>
-    <h3>Right to Lodge a Complaint with a Supervisory Authority</h3>
-    <p>
-      In the event of breaches of the GDPR, data subjects have the right to
-      lodge a complaint with a supervisory authority, in particular in the
-      Member State of their habitual residence, place of work, or the place of
-      the alleged infringement. The right to lodge a complaint is without
-      prejudice to any other administrative or judicial remedy.
-    </p>
-    <h3>Right to Data Portability</h3>
-    <p>
-      You have the right to receive data that we process automatically based on
-      your consent or in the performance of a contract in a commonly used,
-      machine-readable format. If you request the direct transfer of the data to
-      another controller, this will only be done to the extent technically
-      feasible.
-    </p>
-    <h3>Information, Correction, Blocking, and Deletion</h3>
-    <p>
-      Within the framework of the applicable legal provisions, you have the
-      right to obtain information about your stored personal data, its origin,
-      and recipients, as well as the purpose of the data processing, at any
-      time. You also have the right to have this data corrected, blocked, or
-      deleted. You can contact us at any time using the contact details provided
-      in the "Notice on the Responsible Entity" section if you have any
-      questions about this or other issues related to personal data.
-    </p>
+    <h3>{{ "STORAGE_DURATION" | translate }}</h3>
+    <p>{{ "STORAGE_DURATION_CONTENT" | translate }}</p>
+
+    <h3>{{ "LEGAL_BASES" | translate }}</h3>
+    <p>{{ "LEGAL_BASES_CONTENT" | translate }}</p>
+
+    <h3>{{ "RECIPIENTS_OF_DATA" | translate }}</h3>
+    <p>{{ "RECIPIENTS_OF_DATA_CONTENT" | translate }}</p>
+
+    <h3>{{ "REVOCATION_CONSENT" | translate }}</h3>
+    <p>{{ "REVOCATION_CONSENT_CONTENT" | translate }}</p>
+
+    <h3>{{ "RIGHT_TO_OBJECT" | translate }}</h3>
+    <p>{{ "RIGHT_TO_OBJECT_CONTENT" | translate }}</p>
+    <p>{{ "RIGHT_TO_OBJECT_DIRECT_MARKETING" | translate }}</p>
+
+    <h3>{{ "RIGHT_TO_COMPLAINT" | translate }}</h3>
+    <p>{{ "RIGHT_TO_COMPLAINT_CONTENT" | translate }}</p>
+
+    <h3>{{ "RIGHT_TO_DATA_PORTABILITY" | translate }}</h3>
+    <p>{{ "RIGHT_TO_DATA_PORTABILITY_CONTENT" | translate }}</p>
+
+    <h3>{{ "INFORMATION_CORRECTION" | translate }}</h3>
+    <p>{{ "INFORMATION_CORRECTION_CONTENT" | translate }}</p>
   </div>
 </div>
