--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: var(--background-color);
-  padding-top: 38px;
-  padding-bottom: 38px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   position: fixed !important;
   width: 100vw;
   z-index: 99;
@@ -112,6 +112,25 @@ ul {
   margin-top: 5px;
 }
 
+.translation-switch {
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  width: 100px;
+
+  img {
+    cursor: pointer;
+  }
+}
+
+.selected-flag {
+  filter: brightness(1.5);
+}
+
+.flag {
+  filter: brightness(1);
+}
+
 @media (max-width: 1100px) {
   .burger-menu-btn {
     display: block !important;
@@ -126,8 +145,8 @@ ul {
   }
 
   .header {
-    padding-top: 23px;
-    padding-bottom: 23px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
