design adjustments for German language

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="shadow-container">
+    <div class="shadow-container-about">
       <img
         class="about-me-shadow"
         src="assets/img/shadow_about_me.png"
@@ -35,7 +35,7 @@
       <div class="about-me-photo">
         <img src="assets/file2.png" alt="file2" />
       </div>
-      <div class="green-border"></div>
+      <div class="green-border-about"></div>
     </div>
   </div>
 </div>
