--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div class="landing-page-container" id="landing-page">
   <div class="profile-container">
     <div class="profile-picture">
-      <div class="shadow-container">
+      <div class="shadow-container-landing">
         <img
           class="profile-shadow"
           src="assets/img/photo_shadow_1.png"
