--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -7,9 +7,9 @@
           <span [innerHTML]="skill.name"></span>
         </div>
       </div>
-      <div class="shadow-container">
+      <div class="shadow-container-skills">
         <img
-          class="green-shadow"
+          class="green-shadow-skills"
           src="assets/img/green_shadow.png"
           alt="green-shadow"
         />
@@ -19,7 +19,7 @@
     <div class="my-skills-text">
       <div class="my-skills-title">
         <h2>{{ "MY_SKILLS.TITLE" | translate }}</h2>
-        <div class="purple-border"></div>
+        <div class="purple-border-skills"></div>
       </div>
       <div class="my-skills-info">
         <p>{{ "MY_SKILLS.EXPERIENCE" | translate }}</p>
@@ -39,7 +39,7 @@
         </h3>
         <p>{{ "MY_SKILLS.CONTACT" | translate }}</p>
         <a href="#contact">
-          <button class="designed-btn green-btn">
+          <button class="designed-btn green-btn-skills">
             {{ "MY_SKILLS.BUTTON_TEXT" | translate }}
           </button>
         </a>
