--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -22,8 +22,8 @@
         <div class="buttons-container">
           <a [href]="project.liveLink" target="_blank">
             <button
-              class="designed-btn purple-btn"
-              [ngClass]="{ 'last-purple-btn': isLastButton(project) }"
+              class="designed-btn purple-btn-portfolio"
+              [ngClass]="{ 'last-purple-btn-portfolio': isLastButton(project) }"
             >
               Live test
             </button>
