language button design added

--- a/src/app/burger-menu/burger-menu.component.html
+++ b/src/app/burger-menu/burger-menu.component.html
@@ -7,7 +7,7 @@
       [href]="link.href"
       (click)="closeBurgerMenu()"
     >
-      {{ link.text }}
+      {{ link.textKey | translate }}
     </a>
   </div>
 </div>
