--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -282,9 +282,11 @@ textarea {
     margin: 0 auto;
   }
 
-  button {
-    font-size: 16px;
-    margin-right: 0;
+  .button-container {
+    button {
+      font-size: 16px !important;
+      margin-right: 0 !important;
+    }
   }
 
   .go-up-btn {
