--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,6 +7,7 @@
         [src]="getImageSrc(lang)"
         [alt]="lang"
         (click)="changeLanguage(lang)"
+        [ngClass]="getBrightnessClass(lang)"
       />
     </div>
     <div class="header-links">
